--- a/赫尔佐格影评.md
+++ b/赫尔佐格影评.md
@@ -21,11 +21,9 @@
  
 《你瞧，现代世界的网络幻想》
 
-关于火星网络
-在地球之外建立殖民地的想法已经存在已久，关于饮水、空气和住宿的问题似乎已经解决了。实际上 ，太空中并没有什么诱人。
+关于火星网络：在地球之外建立殖民地的想法已经存在已久，关于饮水、空气和住宿的问题似乎已经解决了。实际上 ，太空中并没有什么诱人。
 
-关于火星移民
-我愿意参加，没有任何问题，单程票也行。我愿意成为你的候选人。
+关于火星移民：我愿意参加，没有任何问题，单程票也行。我愿意成为你的候选人。
 
  
 一方面 ，我从赫尔佐格的旁白，从他的语言中，能够感受到他纯粹的好奇心和求知欲，以及开放、包容的心态。面对未知，不会产生抗拒，而是正向积极看待未来。
